<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.3.1</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <groupId>com.piter</groupId>
  <artifactId>bet-api</artifactId>
  <version>0.0.5-SNAPSHOT</version>

  <name>bet-api</name>
  <description>Bet API microservice</description>

  <properties>
    <java.version>21</java.version>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <spring-cloud.version>2023.0.2</spring-cloud.version>
    <awaitility.version>4.2.1</awaitility.version>
    <bet.commons.version>0.0.8-SNAPSHOT</bet.commons.version>
    <docker.image.prefix>pmich96</docker.image.prefix>
    <docker.image.name>${project.artifactId}</docker.image.name>
    <sonar.projectKey>piotrmichalowski96_bet-api</sonar.projectKey>
    <sonar.organization>piotrmichalowski96</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.coverage.exclusions>**/model/*, **/config/*, **/exception/*</sonar.coverage.exclusions>
  </properties>

  <dependencies>
    <!-- Bet microservices commons -->
    <dependency>
      <groupId>com.piter</groupId>
      <artifactId>api-commons</artifactId>
      <version>${bet.commons.version}</version>
    </dependency>
    <dependency>
      <groupId>com.piter</groupId>
      <artifactId>security-commons</artifactId>
      <version>${bet.commons.version}</version>
    </dependency>

    <!-- Other -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
    </dependency>

    <!-- Tests -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>de.flapdoodle.embed</groupId>
      <artifactId>de.flapdoodle.embed.mongo.spring31x</artifactId>
      <version>4.11.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${awaitility.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <layers>
            <enabled>true</enabled>
            <includeLayerTools>true</includeLayerTools>
          </layers>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.12</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>io.fabric8</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>0.44.0</version>
        <configuration>
          <verbose>true</verbose>
          <images>
            <image>
              <name>${docker.image.prefix}/${docker.image.name}</name>
              <alias>${project.artifactId}</alias>
              <build>
                <!-- copies artifact to docker build dir in target -->
                <assembly>
                  <descriptorRef>artifact</descriptorRef>
                </assembly>
                <dockerFile>Dockerfile</dockerFile>
                <tags>
                  <tag>latest</tag>
                  <tag>${project.version}</tag>
                </tags>
              </build>
            </image>
          </images>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
